Fix Flange Point calculations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "numpy",
     "pyvista",
     "PyYAML",
-    "dataclasses"
+    "dataclasses",
+    "shapely"
 ]
 
 [tool.setuptools]
